--- a/PersonalWebpage/PersonalWebpage.csproj
+++ b/PersonalWebpage/PersonalWebpage.csproj
@@ -71,6 +71,7 @@
     <Content Include="assets\img\apple-touch-icon.png" />
     <Content Include="assets\img\favicon.png" />
     <Content Include="assets\img\hero-bg.jpg" />
+    <Content Include="assets\img\portfolio\CAdventure.jpg" />
     <Content Include="assets\img\portfolio\portfolio-1.jpg" />
     <Content Include="assets\img\portfolio\portfolio-2.jpg" />
     <Content Include="assets\img\portfolio\portfolio-3.jpg" />
@@ -139,6 +140,7 @@
     <Content Include="forms\Readme.txt" />
     <Content Include="index.html" />
     <Content Include="inner-page.html" />
+    <Content Include="portfolio-details-Storefront.html" />
     <Content Include="portfolio-details.html" />
     <Content Include="Readme.txt" />
     <Content Include="Web.config" />
